--- a/admin/src/components/topbar/topbar.css
+++ b/admin/src/components/topbar/topbar.css
@@ -1,7 +1,7 @@
 .topbar {
   width: 100%;
   height: 50px;
-  background-color: white;
+  background-color: #e4dfe6;
   position: sticky;
   top: 0;
   z-index: 999;
